fix: white space in print version

--- a/tailwind.css
+++ b/tailwind.css
@@ -92,3 +92,7 @@ body .icon-parent::before {
   visibility: hidden;
   display: inline-block;
 }
+
+.break-after-avoid {
+  break-after: avoid;
+}
